// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper when using the different render methods when using 'mount' matches snapshot 1`] = `
<Dummy
  value="Default value"
>
  <div
    className="Dummy"
  >
    <div
      className="Dummy--value"
    >
      Default value
    </div>
    <div
      className="Dummy--children"
    />
    <button
      className="Dummy--button"
      onClick={[Function]}
    >
      Button
    </button>
  </div>
</Dummy>
`;

exports[`Wrapper when using the different render methods when using 'render' matches snapshot 1`] = `
<div
  class="Dummy"
>
  <div
    class="Dummy--value"
  >
    Default value
  </div>
  <div
    class="Dummy--children"
  />
  <button
    class="Dummy--button"
  >
    Button
  </button>
</div>
`;

exports[`Wrapper when using the different render methods when using 'shallow' matches snapshot 1`] = `
<div
  className="Dummy"
>
  <div
    className="Dummy--value"
  >
    Default value
  </div>
  <div
    className="Dummy--children"
  />
  <button
    className="Dummy--button"
    onClick={[Function]}
  >
    Button
  </button>
</div>
`;
